--- a/Cutting edge 1.ipynb
+++ b/Cutting edge 1.ipynb
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
        "Text(0.5, 1.0, 'Evolution de la stratégie rebalancée tous les 5 jours (historique)')"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -595,80 +595,21 @@
     "#strategie rebalancement tous les T jours\n",
     "T = 5 # on rebalance tous les T jours \n",
     "\n",
-    "evolution_EW_rebalancement5j = log_return_jounalier_histo * 0.0\n",
-    "evolution_EW_rebalancement5j.iloc[0, :] = allocations_EW\n",
-    "evolution_EW_rebalancement5j.iloc[0:T, :] = np.exp(np.cumsum(log_return_jounalier_histo.iloc[0:T, :])) * evolution_EW_rebalancement5j.iloc[0, :]\n",
+    "evolution_EW_rebalancement = log_return_jounalier_histo * 0.0 # initialisation, même forme que log_return_jounalier_histo\n",
+    "#evolution_EW_rebalancement.iloc[0, :] = allocations_EW\n",
+    "evolution_EW_rebalancement.iloc[0:T, :] = np.exp(np.cumsum(log_return_jounalier_histo.iloc[0:T, :])) * allocations_EW\n",
     "last_period = 0\n",
     "for i in range(T, log_return_jounalier_histo.shape[0], T):\n",
-    "    evolution_EW_rebalancement5j.iloc[i, :] = evolution_EW_rebalancement5j.iloc[i-1, :].sum() * allocations_EW\n",
-    "    evolution_EW_rebalancement5j.iloc[i:i+T, :] = np.exp(np.cumsum(log_return_jounalier_histo.iloc[i:i+T, :])) * evolution_EW_rebalancement5j.iloc[i, :]\n",
+    "    evolution_EW_rebalancement.iloc[i:i+T, :] = np.exp(np.cumsum(log_return_jounalier_histo.iloc[i:i+T, :])) * evolution_EW_rebalancement.iloc[i-1, :].sum() * allocations_EW\n",
     "    last_period = i\n",
-    "evolution_EW_rebalancement5j.iloc[last_period:, :] = np.exp(np.cumsum(log_return_jounalier_histo.iloc[last_period:, :])) * evolution_EW_rebalancement5j.iloc[last_period-1, :]\n",
+    "evolution_EW_rebalancement.iloc[last_period:, :] = np.exp(np.cumsum(log_return_jounalier_histo.iloc[last_period:, :])) * evolution_EW_rebalancement.iloc[last_period-1, :]\n",
+    "\n",
     "\n",
     "evolution_EW_buyandHold.sum(axis=1).plot(label=\"EW buy and hold\")\n",
-    "evolution_EW_rebalancement5j.sum(axis=1).plot(label=\"EW rebalancé tous les 5 jours\")\n",
+    "evolution_EW_rebalancement.sum(axis=1).plot(label=\"EW rebalancé tous les \" + str(T)+ \" jours\")\n",
     "plt.legend()\n",
     "plt.grid()\n",
-    "plt.title(\"Evolution de la stratégie rebalancée tous les 5 jours (historique)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Ticker\n",
-       "AC.PA      -9.714451e-17\n",
-       "ACA.PA     -8.326673e-17\n",
-       "AI.PA      -2.636780e-16\n",
-       "AIR.PA     -6.938894e-17\n",
-       "BN.PA      -2.220446e-16\n",
-       "BNP.PA     -1.249001e-16\n",
-       "BVI.PA      2.775558e-16\n",
-       "CA.PA       9.714451e-17\n",
-       "CAP.PA     -3.885781e-16\n",
-       "CS.PA       1.249001e-16\n",
-       "DG.PA      -2.914335e-16\n",
-       "DSY.PA      2.775558e-16\n",
-       "EDEN.PA     8.326673e-17\n",
-       "EL.PA      -2.775558e-17\n",
-       "EN.PA       0.000000e+00\n",
-       "ENGI.PA    -1.387779e-17\n",
-       "ERF.PA     -2.775558e-16\n",
-       "GLE.PA      9.020562e-17\n",
-       "HO.PA      -4.857226e-16\n",
-       "KER.PA      1.873501e-16\n",
-       "LR.PA      -8.326673e-17\n",
-       "MC.PA      -7.216450e-16\n",
-       "ML.PA      -1.249001e-16\n",
-       "OR.PA      -1.249001e-16\n",
-       "ORA.PA     -1.040834e-16\n",
-       "PUB.PA     -2.359224e-16\n",
-       "RI.PA      -1.665335e-16\n",
-       "RMS.PA      2.775558e-16\n",
-       "RNO.PA     -3.122502e-17\n",
-       "SAF.PA     -5.273559e-16\n",
-       "SAN.PA      1.110223e-16\n",
-       "SGO.PA     -5.551115e-17\n",
-       "STLAP.PA   -1.804112e-16\n",
-       "STMPA.PA   -4.857226e-16\n",
-       "SU.PA       2.775558e-17\n",
-       "TEP.PA     -1.804112e-16\n",
-       "TTE.PA     -1.387779e-16\n",
-       "VIE.PA      2.359224e-16\n",
-       "Name: 2025-01-31 00:00:00, dtype: float64"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "evolution_EW_buyandHold.iloc[-1, :] - evolution_EW_rebalancement5j.iloc[-1, :]"
+    "plt.title(\"Evolution de la stratégie rebalancée tous les \" + str(T) + \" jours (historique)\")"
    ]
   }
  ],
