--- a/POO.ipynb
+++ b/POO.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "import cvxpy as cp\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +38,155 @@
     "        evolution.iloc[last_period:, :] = np.exp(np.cumsum(logReturn.iloc[last_period:, :])) * evolution.iloc[last_period-1, :].sum() * allocation\n",
     "    \n",
     "    return evolution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def optimalAllocation_sharpe_minVol(returns, covMatrix, criteria='sharpe', rf=0.0):\n",
+    "    \"\"\"\n",
+    "    Calculate optimal portfolio allocation based on either Sharpe ratio maximization or minimum volatility.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    returns : pandas.Series\n",
+    "        Expected returns for each asset\n",
+    "    covMatrix : pandas.DataFrame\n",
+    "        Variance-covariance matrix of asset returns\n",
+    "    criteria : str, optional (default='sharpe')\n",
+    "        Optimization criteria: 'sharpe' for maximum Sharpe ratio or 'min_volatility' for minimum volatility\n",
+    "    rf : float, optional (default=0.0)\n",
+    "        Risk-free rate used in Sharpe ratio calculation\n",
+    "        \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    numpy.ndarray\n",
+    "        Optimal portfolio weights for each asset\n",
+    "        \n",
+    "    Notes:\n",
+    "    ------\n",
+    "    - For 'sharpe' criteria: maximizes (portfolio_return - rf) / portfolio_volatility\n",
+    "    - For 'min_volatility' criteria: minimizes portfolio_volatility\n",
+    "    - Constraints: weights sum to 1 and no short-selling (weights >= 0)\n",
+    "    \"\"\"\n",
+    "    # Number of assets in portfolio\n",
+    "    nb_stocks = covMatrix.shape[0]\n",
+    "    # Define portfolio weights as optimization variables\n",
+    "    w = cp.Variable(nb_stocks)\n",
+    "    # Define objective function based on criteria\n",
+    "    if criteria == 'sharpe':\n",
+    "        portfolio_return = returns @ w\n",
+    "        portfolio_variance = cp.quad_form(w, covMatrix)\n",
+    "        objective = cp.Maximize((portfolio_return - rf) / cp.sqrt(portfolio_variance))\n",
+    "    elif criteria == 'min_volatility':\n",
+    "        portfolio_variance = cp.quad_form(w, covMatrix)\n",
+    "        objective = cp.Minimize(cp.sqrt(portfolio_variance))\n",
+    "    else:\n",
+    "        raise ValueError(\"Invalid criteria. Use 'sharpe' or 'min_volatility'.\")\n",
+    "\n",
+    "    # Define constraints: weights sum to 1 and no short-selling\n",
+    "    constraints = [cp.sum(w) == 1, w >= 0]\n",
+    "    # Solve optimization problem\n",
+    "    problem = cp.Problem(objective, constraints)\n",
+    "    problem.solve()\n",
+    "\n",
+    "    return w.value\n",
+    "\n",
+    "def optimalAllocation_limitVol(returns, covMatrix, limitMaxVol, rf=0.0):\n",
+    "    \"\"\"\n",
+    "    Calculate optimal portfolio allocation with volatility constraint.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    returns : pandas.Series\n",
+    "        Expected returns for each asset\n",
+    "    covMatrix : pandas.DataFrame\n",
+    "        Variance-covariance matrix of asset returns\n",
+    "    limitMaxVol : float\n",
+    "        Maximum allowed portfolio volatility\n",
+    "    rf : float, optional (default=0.0)\n",
+    "        Risk-free rate used in Sharpe ratio calculation\n",
+    "        \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    numpy.ndarray\n",
+    "        Optimal portfolio weights for each asset\n",
+    "    \"\"\"\n",
+    "    # Number of assets in portfolio\n",
+    "    nb_stocks = covMatrix.shape[0]\n",
+    "    \n",
+    "    # Define portfolio weights as optimization variables\n",
+    "    w = cp.Variable(nb_stocks)\n",
+    "    \n",
+    "    # Portfolio return and variance\n",
+    "    portfolio_return = returns @ w\n",
+    "    portfolio_variance = cp.quad_form(w, covMatrix)\n",
+    "    \n",
+    "    # Define objective function: maximize Sharpe ratio\n",
+    "    objective = cp.Maximize(portfolio_return)\n",
+    "    \n",
+    "    # Define constraints:\n",
+    "    constraints = [\n",
+    "        cp.sum(w) == 1,\n",
+    "        w >= 0,\n",
+    "        cp.sqrt(portfolio_variance) <= limitMaxVol\n",
+    "    ]\n",
+    "    \n",
+    "    # Solve optimization problem\n",
+    "    problem = cp.Problem(objective, constraints)\n",
+    "    problem.solve()\n",
+    "    \n",
+    "    return w.value\n",
+    "\n",
+    "def optimalAllocation_limitRet(returns, covMatrix, limitMinRet, rf=0.0):\n",
+    "    \"\"\"\n",
+    "    Calculate optimal portfolio allocation with return constraint.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    returns : pandas.Series\n",
+    "        Expected returns for each asset\n",
+    "    covMatrix : pandas.DataFrame\n",
+    "        Variance-covariance matrix of asset returns\n",
+    "    limitMinRet : float\n",
+    "        Minimum required portfolio return\n",
+    "    rf : float, optional (default=0.0)\n",
+    "        Risk-free rate used in Sharpe ratio calculation\n",
+    "        \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    numpy.ndarray\n",
+    "        Optimal portfolio weights for each asset\n",
+    "    \"\"\"\n",
+    "    # Number of assets in portfolio\n",
+    "    nb_stocks = covMatrix.shape[0]\n",
+    "    \n",
+    "    # Define portfolio weights as optimization variables\n",
+    "    w = cp.Variable(nb_stocks)\n",
+    "    \n",
+    "    # Portfolio return and variance\n",
+    "    portfolio_return = returns @ w\n",
+    "    portfolio_variance = cp.quad_form(w, covMatrix)\n",
+    "    \n",
+    "    # Define objective function: minimise volatility\n",
+    "    objective = cp.Minimize(portfolio_variance)\n",
+    "    \n",
+    "    # Define constraints:\n",
+    "    constraints = [\n",
+    "        cp.sum(w) == 1,\n",
+    "        w >= 0,\n",
+    "        portfolio_return >= limitMinRet\n",
+    "    ]\n",
+    "    \n",
+    "    # Solve optimization problem\n",
+    "    problem = cp.Problem(objective, constraints)\n",
+    "    problem.solve()\n",
+    "    \n",
+    "    return w.value\n",
+    "\n"
    ]
   },
   {
