Add market model class

--- a/Data/Traitement file data CAC40.ipynb
+++ b/Data/Traitement file data CAC40.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "# Get all .txt files in the directory and adding \"Data_1d_10y\" before the extension\n",
-    "directory = \"Data/CAC40 daily 10y\"\n",
+    "directory = \"CAC40 daily 10y\"\n",
     "for filename in os.listdir(directory):\n",
     "    if filename.endswith(\".txt\") and \"_Data_1d_10y\" not in filename:\n",
     "        # Create new filename by adding \"Data_1d_10y\" before the extension\n",
@@ -33,7 +33,7 @@
     "        print(f\"Renamed: {filename} -> {new_filename}\")\n",
     "\n",
     "# Get all .txt files in the directory and adding \"Data_1min_5d\" before the extension\n",
-    "directory = \"Data/CAC40 min 5d\"\n",
+    "directory = \"CAC40 min 5d\"\n",
     "for filename in os.listdir(directory):\n",
     "    if filename.endswith(\".txt\") and \"Data_1min_5d\" not in filename:\n",
     "        # Create new filename by adding \"Data_1d_10y\" before the extension\n",
